# berth

./: .gitignore  Cargo.toml  README.md  deny.toml  install.sh
.github/workflows/: docs.yml  release.yml
Formula/: berth.rb
crates/berth-cli/: Cargo.toml
crates/berth-cli/src/: global_config.rs  health_check.rs  main.rs  paths.rs  proxy_filter.rs  resource_limits.rs  sandbox_runtime.rs  secrets.rs
crates/berth-cli/src/commands/: config.rs  link.rs  mod.rs  proxy.rs  restart.rs  start.rs  status.rs
crates/berth-cli/tests/: cli.rs
crates/berth-registry/: Cargo.toml
crates/berth-registry/data/: seed_registry.json
crates/berth-registry/src/: lib.rs  seed.rs
crates/berth-runtime/: Cargo.toml
crates/berth-runtime/src/: lib.rs
docs/: book.toml
docs/src/: cli-reference.md  client-integration.md  index.md  installation.md  runtime-operations.md  security-model.md
docs/theme/: custom.css
npm/: README.md  install.js  package.json
scripts/: benchmark-smoke.sh
