[workspace]
resolver = "2"
members = [
    "crates/berth-cli",
    "crates/berth-runtime",
    "crates/berth-registry",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/berth-mcp/berth"
homepage = "https://github.com/berth-mcp/berth"
documentation = "https://berth-mcp.github.io/berth/"
description = "The safe runtime & package manager for MCP servers"
readme = "README.md"
keywords = ["mcp", "cli", "ai", "tools", "server-manager"]
categories = ["command-line-utilities"]
