[package]
name = "berth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Berth CLI - the safe runtime & package manager for MCP servers"
readme = "../../README.md"

[[bin]]
name = "berth"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
berth-registry = { version = "0.1.1", path = "../berth-registry" }
berth-runtime = { version = "0.1.1", path = "../berth-runtime" }
clap = { version = "4", features = ["derive"] }
colored = "3"
dirs = "6"
libc = "0.2"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
which = "7"

[dev-dependencies]
tempfile = "3"
